--- a/scss/_columns.scss
+++ b/scss/_columns.scss
@@ -149,13 +149,14 @@ $col-gap-multiplier-xs: false !default;
       @if $i == 0.5 { $ii: '0-5'; }
       @if $i == 1.5 { $ii: '1-5'; }
       @if $i == 2.5 { $ii: '2-5'; }
-      .#{$prefix}gap-#{$ii},
+      // .#{$prefix}gap-#{$ii},
       .#{$prefix}cols-gap-#{$ii} {
         margin-right: -#{$col-gap-multiplier * $i * $multipler};
         margin-left: -#{$col-gap-multiplier * $i * $multipler};
       }
-      .#{$prefix}gap-#{$ii} > .col,
-      .#{$prefix}gap-#{$ii} > [class*="col-"],
+      // Not used for cols, please see gap-*
+      // .#{$prefix}gap-#{$ii} > .col,
+      // .#{$prefix}gap-#{$ii} > [class*="col-"],
       .#{$prefix}cols-gap-#{$ii} > .col,
       .#{$prefix}cols-gap-#{$ii} > [class*="col-"] {
         padding-right: #{$col-gap-multiplier * $i * $multipler};
